# RAIL-license-generator_backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.restart.yml  docker-compose.yml
app/: prestart.sh  pyproject.toml
app/alembic/versions/: 4f6d57b75281_add_additional_project_information.py  fd721bd9c282_add_first_release_version_of_tables.py
app/app/: initial_data.py  main.py  utils.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: license.py  license_domain.py
app/app/crud/: base.py  crud_license_domain.py  crud_license_restriction.py  crud_license_source.py
app/app/data/: initial_restrictions.json
app/app/db/: init_db.py
app/app/models/: license.py  license_restriction.py  license_source.py
app/app/templates/: OpenRAIL-AMS.jinja  RAIL-AMS.jinja  ResearchUseRAIL.jinja
app/app/tests/load_testing/: locustfile.py
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0dddbeb32e05_add_first_version_of_tables.py  76b427d4a4fc_add_first_release_version_of_tables.py  9223c01e202b_first_draft_of_tables.py  a1c1bbd0162b_added_first_draft_of_tables.py  d40076a87dee_added_first_draft_of_tables.py  d4867f3a4c0a_first_revision.py  f83639b756e4_add_first_version_of_tables.py
backend/app/app/: backend_pre_start.py  initial_data.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/endpoints/: license.py  license_domain.py  login.py  (+3 more)
backend/app/app/core/: config.py  rate_limiting.py
backend/app/app/crud/: __init__.py  base.py  crud_license.py  crud_user.py
backend/app/app/data/: initial_data.json
backend/app/app/db/: init_db.py  session.py
backend/app/app/models/: __init__.py  license.py  license_domain.py  license_restriction.py  link_tables.py  msg.py  token.py  user.py
backend/app/app/templates/: OpenRAIL-AMS.jinja  RAIL-AMS.jinja  ResearchUseRAIL.jinja  license.jinja
backend/app/app/tests/load_testing/: locustfile.py
backend/app/app/tests/utils/: item.py  user.py
backend/app/scripts/: generate_all_licenses.py
(+7 files in other folders)
