[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
python-multipart = "^0.0.5"
email-validator = "^1.3.1"
requests = "^2.31.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^6.3.1"
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pytest = "^5.4.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlmodel = "^0.0.11"
uvicorn = "^0.24.0.post1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.7.8"
flake8 = "^3.9.2"
pytest = "^5.4.3"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.12.1"

[tool.poetry.group.dev.dependencies]
locust = "^2.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

